# physicsrenderer

./: .gitignore  .gitmodules  CMakeLists.txt  OverlayRenderer.cpp  OverlayRenderer.h  README.md  Texture.h  Vertex.h  main.cpp
app/: CMakeLists.txt  main.cpp
app/include/: Constants.h  SharedState.h
app/include/cmake/: Configuration.hpp  Configuration.hpp.in
app/include/concepts/: DimensionConcepts.h
app/include/controller/: InputController.h
app/include/engine/: Engine.h  Entity3.h  EntityNode3.h  State.h  Transform.tpp
app/include/render/: Line.h  Mesh.hpp  Model.h  ModelLoader.h  OverlayRenderer.h  OverlayWindow.h  Shader.h  ShaderProgram.h  Texture.h  Vertex.h
app/include/render/camera/: Camera.h  Camera3D.h
app/include/render/object/: Aggregate.tpp  Cube.tpp  Drawable.tpp  Field.tpp  GeneralModel.tpp  PhysicsObject.tpp  Primitive.tpp  PrimitiveLine.tpp  Sphere.tpp  State.h
app/include/render/overlay/: OverlayRenderer.h  OverlayWindow.h
app/include/util/: Callbacks.h  FileHandler.h  utility.h
app/include/window/: BaseWindow.h  WindowContext.h  WindowFactory.h
app/src/: SharedState.cpp  StbImageSource.cpp
app/src/engine/: Entity3.cpp  EntityNode3.cpp  State.cpp  Transform.cpp
app/src/render/: Line.cpp  ModelLoader.cpp  OverlayRenderer.cpp  OverlayWindow.cpp  Shader.cpp  Texture.cpp  Vertex.cpp
app/src/render/camera/: Camera.cpp  Camera3D.cpp
app/src/util/: Callbacks.cpp
app/src/window/: BaseWindow.cpp  WindowContext.cpp  WindowFactory.cpp
ignore/: Mesh.cpp  Mesh.h
include/: Callbacks.h  Camera.h  FileHandler.h  InputParser.h  Line.h  PrintVector.h  Shader.h  ShaderProgram.h  SharedState.h  State.h  Texture.h  Vertex.h  utility.h
include/camera/: Camera.h  Camera3D.h
include/controller/: InputController.h
include/render/: Aggregate.h  Cube.h  Drawable.h  Field.h  GeneralModel.h  Mesh.h  Mesh.hpp  Model.h  ModelLoader.h  OverlayRenderer.h  OverlayWindow.h  PhysicsObject.h  Primitive.h  PrimitiveLine.h  Shader.h  ShaderProgram.h  Sphere.h  State.h
include/util/: Callbacks.h  utility.h
include/window/: BaseWindow.h  WindowContext.h  WindowFactory.h
lib/imgui/: CMakeLists.txt
lib/internal/: CMakeLists.txt
lib/internal/inputparser/: CMakeLists.txt
lib/internal/inputparser/include/: InputParser.h
lib/internal/inputparser/src/: InputParser.cpp
lib/internal/logger/: CMakeLists.txt
lib/internal/logger/include/: Logger.h  Utilities.h
lib/internal/logger/src/: Logger.cpp
lib/logger/: CMakeLists.txt
lib/logger/include/: Logger.h
lib/logger/src/: Logger.cpp
shader/: simple_fragment_shader.frag  simple_vertex_shader.vert
shader/line_shader/: glsl_fragment_shader.frag  glsl_vertex_shader.vert
src/: Callbacks.cpp  Camera.cpp  FileHandler.cpp  InputParser.cpp  Line.cpp  PrintVector.cpp  Shader.cpp  ShaderProgram.cpp  SharedState.cpp  State.cpp  Texture.cpp  Vertex.cpp  utility.cpp
src/camera/: Camera.cpp  Camera3D.cpp
src/controller/: InputController.cpp
src/render/: Line.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  OverlayRenderer.cpp  OverlayWindow.cpp  Shader.cpp  ShaderProgram.cpp
src/util/: Callbacks.cpp  FileHandler.cpp  utility.cpp
src/window/: BaseWindow.cpp  WindowContext.cpp
